--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,8 @@ go:
 - 1.3
 
 before_install:
-- git clone https://github.com/coreos/etcd.git
-- cd etcd
+- git clone https://github.com/coreos/etcd.git /tmp/etcd
+- cd /tmp/etcd
 - ./build
 - ./bin/etcd &
+- cd -
