--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ go:
 before_install:
 - git clone https://github.com/coreos/etcd.git /tmp/etcd
 - cd /tmp/etcd
+- git checkout release-0.4
 - ./build
 - ./bin/etcd &
 - cd -
