--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,6 @@
 language: go
 
-go:
-- 1.3
-
-before_install:
-- git clone https://github.com/coreos/etcd.git /tmp/etcd
-- cd /tmp/etcd
-- ./build
-- ./bin/etcd &
-- cd -
-- sleep 1
+script:
+- make test
+- make
+- make static
